<resources>
    <string name="app_name">BabyNeeds</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="hint_item">Enter Item</string>
    <string name="hint_qty">Enter Quantity</string>
    <string name="hint_color">Enter Color</string>
    <string name="hint_size">Enter Size</string>
    <string name="save_btn">Save</string>
    <string name="drop_table">DROP TABLE IF EXISTS</string>
    <string name="edit_time">Edit Item</string>
    <string name="update_text">Update</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no_text">no</string>
    <string name="yes_text">yes</string>
    <string name="todo_v">TODO</string>
    <string name="todo_m">TODO</string>
</resources>