<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout

            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:text="@string/enter_item"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"/>
            <EditText
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/babyItem"
                android:hint="@string/hint_item"
                android:layout_below="@+id/title" />

            <EditText
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemQuantity"
                android:hint="@string/hint_qty"
                android:inputType="number"
                android:layout_below="@+id/babyItem" />

            <EditText
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemColor"
                android:hint="@string/hint_color"
                android:layout_below="@+id/itemQuantity" />

            <EditText
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemSize"
                android:inputType="number"
                android:hint="@string/hint_size"
                android:layout_below="@+id/itemColor" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/saveButton"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_btn"
                android:background="@color/design_default_color_error"
                android:layout_below="@+id/itemSize"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>